# cc-monitoring-agent

./: .gitignore  factory.md  pyproject.toml
.dingllm/: serve.py
.dingllm/constitution/: mission.md  roadmap.md  tech-stack.md
.dingllm/prd/: pane-content-cache.md
.dingllm/specs/: architecture.mmd  data-flow-sequence.mmd  discover-analyze-sequence.mmd
.factory/: checkpoint.json  config.json  eval_profile.json  events.jsonl  last_eval.json  performance_report.json  results.tsv
.factory/archive/: cc-monitoring-agent.md
.factory/archive/experiments/: cc-monitoring-agent-001.md  cc-monitoring-agent-002.md  cc-monitoring-agent-003.md  cc-monitoring-agent-004.md  cc-monitoring-agent-005.md  cc-monitoring-agent-006.md  cc-monitoring-agent-007.md  cc-monitoring-agent-008.md  (+22 more)
.factory/reviews/: archivist-checkpoints.md  archivist-latest.md  builder-latest.md  ceo-latest.md  ceo-verdict-builder.md  ceo-verdict-e2e.md  ceo-verdict-researcher.md  ceo-verdict-strategist.md  researcher-latest.md  reviewer-latest.md  session-summary.json  session-summary.md  strategist-latest.md
.factory/strategy/: backlog.md  current.md  observations.md  research.md
eval/: score.py
src/cc_monitor/: __main__.py  analyzer.py  cli.py  discovery.py  display.py  filtering.py  llm_provider.py  logging.py  models.py  watch.py
src/cc_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyzer.py  test_basic.py  test_discovery.py  test_display.py  test_filter_sort.py  test_filtering.py  test_integration.py  test_llm_provider.py  test_summary.py  test_watch.py
(+110 files in other folders)
