[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-monitor"
version = "0.1.0"
description = "Monitor Claude Code and OpenCode agent sessions running in tmux"
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "rich",
]

[project.scripts]
ccm = "cc_monitor.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
