[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-monitor"
version = "0.1.0"
description = "Monitor Claude Code and OpenCode agent sessions running in tmux"
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "rich",
]

[project.scripts]
ccm = "cc_monitor.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
mypy_path = "src"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cc_monitor --cov-report=term-missing"

[tool.coverage.run]
source_pkgs = ["cc_monitor"]

[tool.coverage.report]
show_missing = true
fail_under = 80
